src/grammar/.antlr/TyCParser.py
# Generated from d:/PPL/TyC-Cool/src/grammar/TyC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TyCParser ( Parser ):

    grammarFileName = "TyC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'continue'", "'if'", "'else'", "'for'", 
                     "'bool'", "'number'", "'string'", "'T'", "'F'", "'func'", 
                     "'endfunc'", "'call'", "'return'", "'+'", "'-'", "'*'", 
                     "'='", "'>'", "'<'", "'**'", "'#'", "'<-'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "','", "';'", "':'" ]

    symbolicNames = [ "<INVALID>", "CONTINUE", "IF", "ELSE", "FOR", "BOOL", 
                      "NUMBER", "STRING", "TRUE", "FALSE", "FUNC", "ENDFUNC", 
                      "CALL", "RETURN", "PLUS", "SUB", "MUL", "EQ", "GT", 
                      "LT", "POW", "HASH", "ARROW", "LPAREN", "RPAREN", 
                      "LBRACK", "RBRACK", "LBRACE", "RBRACE", "COMMA", "SEMI", 
                      "COLON", "ID", "GLOBAL_ID", "INT_LIT", "FLOAT_LIT", 
                      "STRING_LIT", "LINE_COMMENT", "BLOCK_COMMENT", "WS", 
                      "ERROR_CHAR", "ILLEGAL_ESCAPE", "UNCLOSE_STRING" ]

    RULE_list_expression = 0
    RULE_expression = 1
    RULE_expression1 = 2
    RULE_expression2 = 3
    RULE_expression3 = 4
    RULE_expression4 = 5
    RULE_expression5 = 6
    RULE_expression6 = 7
    RULE_function_call = 8
    RULE_list_literal = 9
    RULE_literal = 10
    RULE_array_lit = 11
    RULE_program = 12
    RULE_variable = 13
    RULE_function = 14
    RULE_list_param = 15
    RULE_param = 16
    RULE_all_type = 17
    RULE_list_statement = 18
    RULE_statement = 19
    RULE_declared_statement = 20
    RULE_assign_statement = 21
    RULE_lhs = 22
    RULE_if_statement = 23
    RULE_for_statement = 24
    RULE_continue_statement = 25
    RULE_call_statement = 26
    RULE_return_statement = 27
    RULE_block_statement = 28

    ruleNames =  [ "list_expression", "expression", "expression1", "expression2", 
                   "expression3", "expression4", "expression5", "expression6", 
                   "function_call", "list_literal", "literal", "array_lit", 
                   "program", "variable", "function", "list_param", "param", 
                   "all_type", "list_statement", "statement", "declared_statement", 
                   "assign_statement", "lhs", "if_statement", "for_statement", 
                   "continue_statement", "call_statement", "return_statement", 
                   "block_statement" ]

    EOF = Token.EOF
    CONTINUE=1
    IF=2
    ELSE=3
    FOR=4
    BOOL=5
    NUMBER=6
    STRING=7
    TRUE=8
    FALSE=9
    FUNC=10
    ENDFUNC=11
    CALL=12
    RETURN=13
    PLUS=14
    SUB=15
    MUL=16
    EQ=17
    GT=18
    LT=19
    POW=20
    HASH=21
    ARROW=22
    LPAREN=23
    RPAREN=24
    LBRACK=25
    RBRACK=26
    LBRACE=27
    RBRACE=28
    COMMA=29
    SEMI=30
    COLON=31
    ID=32
    GLOBAL_ID=33
    INT_LIT=34
    FLOAT_LIT=35
    STRING_LIT=36
    LINE_COMMENT=37
    BLOCK_COMMENT=38
    WS=39
    ERROR_CHAR=40
    ILLEGAL_ESCAPE=41
    UNCLOSE_STRING=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class List_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(TyCParser.ExpressionContext,0)


        def COMMA(self):
            return self.getToken(TyCParser.COMMA, 0)

        def list_expression(self):
            return self.getTypedRuleContext(TyCParser.List_expressionContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_list_expression




    def list_expression(self):

        localctx = TyCParser.List_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_list_expression)
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.expression()
                self.state = 59
                self.match(TyCParser.COMMA)
                self.state = 60
                self.list_expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.Expression1Context)
            else:
                return self.getTypedRuleContext(TyCParser.Expression1Context,i)


        def GT(self):
            return self.getToken(TyCParser.GT, 0)

        def LT(self):
            return self.getToken(TyCParser.LT, 0)

        def EQ(self):
            return self.getToken(TyCParser.EQ, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_expression




    def expression(self):

        localctx = TyCParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.expression1()
                self.state = 66
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 917504) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 67
                self.expression1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.expression1()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression2(self):
            return self.getTypedRuleContext(TyCParser.Expression2Context,0)


        def POW(self):
            return self.getToken(TyCParser.POW, 0)

        def expression1(self):
            return self.getTypedRuleContext(TyCParser.Expression1Context,0)


        def getRuleIndex(self):
            return TyCParser.RULE_expression1




    def expression1(self):

        localctx = TyCParser.Expression1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expression1)
        try:
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.expression2(0)
                self.state = 73
                self.match(TyCParser.POW)
                self.state = 74
                self.expression1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.expression2(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression3(self):
            return self.getTypedRuleContext(TyCParser.Expression3Context,0)


        def expression2(self):
            return self.getTypedRuleContext(TyCParser.Expression2Context,0)


        def PLUS(self):
            return self.getToken(TyCParser.PLUS, 0)

        def SUB(self):
            return self.getToken(TyCParser.SUB, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_expression2



    def expression2(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TyCParser.Expression2Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expression2, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.expression3(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 87
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = TyCParser.Expression2Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression2)
                    self.state = 82
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 83
                    _la = self._input.LA(1)
                    if not(_la==14 or _la==15):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 84
                    self.expression3(0) 
                self.state = 89
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expression3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression4(self):
            return self.getTypedRuleContext(TyCParser.Expression4Context,0)


        def expression3(self):
            return self.getTypedRuleContext(TyCParser.Expression3Context,0)


        def MUL(self):
            return self.getToken(TyCParser.MUL, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_expression3



    def expression3(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TyCParser.Expression3Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expression3, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.expression4()
            self._ctx.stop = self._input.LT(-1)
            self.state = 98
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = TyCParser.Expression3Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression3)
                    self.state = 93
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 94
                    self.match(TyCParser.MUL)
                    self.state = 95
                    self.expression4() 
                self.state = 100
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expression4Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUB(self):
            return self.getToken(TyCParser.SUB, 0)

        def expression4(self):
            return self.getTypedRuleContext(TyCParser.Expression4Context,0)


        def expression5(self):
            return self.getTypedRuleContext(TyCParser.Expression5Context,0)


        def getRuleIndex(self):
            return TyCParser.RULE_expression4




    def expression4(self):

        localctx = TyCParser.Expression4Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expression4)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.match(TyCParser.SUB)
                self.state = 102
                self.expression4()
                pass
            elif token in [8, 9, 12, 19, 23, 25, 32, 33, 34, 35, 36]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.expression5()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression5Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(TyCParser.LBRACK, 0)

        def expression(self):
            return self.getTypedRuleContext(TyCParser.ExpressionContext,0)


        def RBRACK(self):
            return self.getToken(TyCParser.RBRACK, 0)

        def expression5(self):
            return self.getTypedRuleContext(TyCParser.Expression5Context,0)


        def expression6(self):
            return self.getTypedRuleContext(TyCParser.Expression6Context,0)


        def getRuleIndex(self):
            return TyCParser.RULE_expression5




    def expression5(self):

        localctx = TyCParser.Expression5Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expression5)
        try:
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(TyCParser.LBRACK)
                self.state = 107
                self.expression()
                self.state = 108
                self.match(TyCParser.RBRACK)
                self.state = 109
                self.expression5()
                pass
            elif token in [8, 9, 12, 19, 23, 32, 33, 34, 35, 36]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.expression6()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression6Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def GLOBAL_ID(self):
            return self.getToken(TyCParser.GLOBAL_ID, 0)

        def literal(self):
            return self.getTypedRuleContext(TyCParser.LiteralContext,0)


        def function_call(self):
            return self.getTypedRuleContext(TyCParser.Function_callContext,0)


        def LPAREN(self):
            return self.getToken(TyCParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(TyCParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(TyCParser.RPAREN, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_expression6




    def expression6(self):

        localctx = TyCParser.Expression6Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expression6)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(TyCParser.ID)
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.match(TyCParser.GLOBAL_ID)
                pass
            elif token in [8, 9, 19, 34, 35, 36]:
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                self.literal()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 117
                self.function_call()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 5)
                self.state = 118
                self.match(TyCParser.LPAREN)
                self.state = 119
                self.expression()
                self.state = 120
                self.match(TyCParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CALL(self):
            return self.getToken(TyCParser.CALL, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def ARROW(self):
            return self.getToken(TyCParser.ARROW, 0)

        def list_expression(self):
            return self.getTypedRuleContext(TyCParser.List_expressionContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_function_call




    def function_call(self):

        localctx = TyCParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_function_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(TyCParser.CALL)
            self.state = 125
            self.match(TyCParser.ID)
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 126
                self.match(TyCParser.ARROW)
                self.state = 127
                self.list_expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_literalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(TyCParser.LiteralContext,0)


        def COMMA(self):
            return self.getToken(TyCParser.COMMA, 0)

        def list_literal(self):
            return self.getTypedRuleContext(TyCParser.List_literalContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_list_literal




    def list_literal(self):

        localctx = TyCParser.List_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_list_literal)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.literal()
                self.state = 131
                self.match(TyCParser.COMMA)
                self.state = 132
                self.list_literal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.literal()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(TyCParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(TyCParser.FALSE, 0)

        def INT_LIT(self):
            return self.getToken(TyCParser.INT_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(TyCParser.FLOAT_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(TyCParser.STRING_LIT, 0)

        def array_lit(self):
            return self.getTypedRuleContext(TyCParser.Array_litContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_literal




    def literal(self):

        localctx = TyCParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_literal)
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.match(TyCParser.TRUE)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(TyCParser.FALSE)
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 3)
                self.state = 139
                self.match(TyCParser.INT_LIT)
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 4)
                self.state = 140
                self.match(TyCParser.FLOAT_LIT)
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 5)
                self.state = 141
                self.match(TyCParser.STRING_LIT)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 6)
                self.state = 142
                self.array_lit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_litContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LT(self):
            return self.getToken(TyCParser.LT, 0)

        def list_literal(self):
            return self.getTypedRuleContext(TyCParser.List_literalContext,0)


        def GT(self):
            return self.getToken(TyCParser.GT, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_array_lit




    def array_lit(self):

        localctx = TyCParser.Array_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_array_lit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(TyCParser.LT)
            self.state = 146
            self.list_literal()
            self.state = 147
            self.match(TyCParser.GT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TyCParser.EOF, 0)

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.VariableContext)
            else:
                return self.getTypedRuleContext(TyCParser.VariableContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.FunctionContext)
            else:
                return self.getTypedRuleContext(TyCParser.FunctionContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_program




    def program(self):

        localctx = TyCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 224) != 0):
                self.state = 149
                self.variable()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 155
                self.function()
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 161
            self.match(TyCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def all_type(self):
            return self.getTypedRuleContext(TyCParser.All_typeContext,0)


        def GLOBAL_ID(self):
            return self.getToken(TyCParser.GLOBAL_ID, 0)

        def EQ(self):
            return self.getToken(TyCParser.EQ, 0)

        def literal(self):
            return self.getTypedRuleContext(TyCParser.LiteralContext,0)


        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_variable




    def variable(self):

        localctx = TyCParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.all_type()
            self.state = 164
            self.match(TyCParser.GLOBAL_ID)
            self.state = 165
            self.match(TyCParser.EQ)
            self.state = 166
            self.literal()
            self.state = 167
            self.match(TyCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(TyCParser.FUNC, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LPAREN(self):
            return self.getToken(TyCParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(TyCParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(TyCParser.COLON, 0)

        def list_statement(self):
            return self.getTypedRuleContext(TyCParser.List_statementContext,0)


        def ENDFUNC(self):
            return self.getToken(TyCParser.ENDFUNC, 0)

        def all_type(self):
            return self.getTypedRuleContext(TyCParser.All_typeContext,0)


        def list_param(self):
            return self.getTypedRuleContext(TyCParser.List_paramContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_function




    def function(self):

        localctx = TyCParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(TyCParser.FUNC)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 224) != 0):
                self.state = 170
                self.all_type()


            self.state = 173
            self.match(TyCParser.ID)
            self.state = 174
            self.match(TyCParser.LPAREN)
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 175
                self.list_param()


            self.state = 178
            self.match(TyCParser.RPAREN)
            self.state = 179
            self.match(TyCParser.COLON)
            self.state = 180
            self.list_statement()
            self.state = 181
            self.match(TyCParser.ENDFUNC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_paramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(TyCParser.ParamContext,0)


        def COMMA(self):
            return self.getToken(TyCParser.COMMA, 0)

        def list_param(self):
            return self.getTypedRuleContext(TyCParser.List_paramContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_list_param




    def list_param(self):
